--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,68 +1,86 @@
-    - name: Generate project files
-      shell: bash
-      run: |
-        set -euo pipefail
-        mkdir -p scripts .github/workflows
+name: Bootstrap Repo for Render Deployment
 
-        cat > app.py <<'PY'
-        import os
-        from flask import Flask, jsonify, request
+on:
+  workflow_dispatch: {}
 
-        app = Flask(__name__)
+jobs:
+  bootstrap:
+    name: Create project files for Render
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
 
-        @app.get("/healthz")
-        def health():
-            return jsonify(status="ok")
+      - name: Generate project files
+        shell: bash
+        run: |
+          set -euo pipefail
+          mkdir -p scripts .github/workflows
 
-        @app.get("/")
-        def index():
-            return (
-                "<h1>Construction Estimator</h1>"
-                "<p>POST JSON to <code>/api/estimate</code>.</p>"
-            )
+          cat > app.py <<'PY'
+          import os
+          from flask import Flask, jsonify, request
 
-        COST_PER_SQFT = {"basic": 120.0, "standard": 180.0, "premium": 240.0}
+          app = Flask(__name__)
 
-        @app.post("/api/estimate")
-        def estimate():
-            data = request.get_json(silent=True) or {}
-            rooms = data.get("rooms", [])
-            total = 0.0
-            items = []
-            for r in rooms:
-                name = r.get("name","Room")
-                area = float(r.get("area_sqft",0))
-                finish = str(r.get("finish","standard")).lower()
-                rate = COST_PER_SQFT.get(finish, COST_PER_SQFT["standard"])
-                cost = round(area*rate,2)
-                items.append({"name":name,"area_sqft":area,"finish":finish,"rate":rate,"cost":cost})
-                total += cost
-            return jsonify({"subtotal": round(total,2), "currency":"USD", "items": items})
-        PY
+          @app.get("/healthz")
+          def health():
+              return jsonify(status="ok")
 
-        cat > requirements.txt <<'REQ'
-        flask==3.0.3
-        gunicorn==21.2.0
-        REQ
+          @app.get("/")
+          def index():
+              return (
+                  "<h1>Construction Estimator</h1>"
+                  "<p>POST JSON to <code>/api/estimate</code> to get a rough estimate.</p>"
+              )
 
-        cat > gunicorn.conf.py <<'GC'
-        bind = "0.0.0.0:5000"
-        workers = 2
-        threads = 4
-        timeout = 60
-        graceful_timeout = 30
-        keepalive = 5
-        GC
+          COST_PER_SQFT = {"basic": 120.0, "standard": 180.0, "premium": 240.0}
 
-        cat > render.yaml <<'RY'
-        services:
-          - type: web
-            name: jcw-estimate
-            env: python
-            plan: free
-            buildCommand: "pip install -r requirements.txt"
-            startCommand: "gunicorn app:app -c gunicorn.conf.py"
-            envVars:
-              - key: OPENAI_API_KEY
-                sync: false
-        RY
+          @app.post("/api/estimate")
+          def estimate():
+              data = request.get_json(silent=True) or {}
+              rooms = data.get("rooms", [])
+              total = 0.0
+              items = []
+              for r in rooms:
+                  name = r.get("name","Room")
+                  area = float(r.get("area_sqft",0))
+                  finish = str(r.get("finish","standard")).lower()
+                  rate = COST_PER_SQFT.get(finish, COST_PER_SQFT["standard"])
+                  cost = round(area*rate,2)
+                  items.append({"name":name,"area_sqft":area,"finish":finish,"rate":rate,"cost":cost})
+                  total += cost
+              return jsonify({"subtotal": round(total,2), "currency":"USD", "items": items})
+          PY
+
+          cat > requirements.txt <<'REQ'
+          flask==3.0.3
+          gunicorn==21.2.0
+          REQ
+
+          cat > gunicorn.conf.py <<'GC'
+          bind = "0.0.0.0:5000"
+          workers = 2
+          threads = 4
+          timeout = 60
+          graceful_timeout = 30
+          keepalive = 5
+          GC
+
+          cat > render.yaml <<'RY'
+          services:
+            - type: web
+              name: jcw-estimate
+              env: python
+              plan: free
+              buildCommand: "pip install -r requirements.txt"
+              startCommand: "gunicorn app:app -c gunicorn.conf.py"
+              envVars:
+                - key: OPENAI_API_KEY
+                  sync: false
+          RY
+
+      - name: Commit generated files
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Bootstrap: add Render deployment files"
+          branch: main
